--- a/Chart.yaml
+++ b/Chart.yaml
@@ -14,5 +14,5 @@ home: https://redis.io
 sources:
   - https://github.com/redis/redis
 maintainers:
-  - name: Your Name
-    email: your.email@example.com
+  - name: Özkan Poyrazoğlu
+    email: ozkanpoyrazoglu@gmail.com
